misc changes (paddings & cie)

--- a/ColorTouch/red-colors.less
+++ b/ColorTouch/red-colors.less
@@ -1,5 +1,5 @@
-@accent1: #F55E61;
-@accent2: #e3508d;
+@accent1: ~'rgba(245, 94, 97,1)';
+@accent2: ~'rgba(227, 80, 141,1)';
 @accent3: #b758b1;
 @accent4: #7165c4;
 @accent5: #006dc1;
