--- a/Notes/blue-colors.less
+++ b/Notes/blue-colors.less
@@ -1,9 +1,9 @@
-@accent1: #7CCCE5;
-@accent2: #B7D968;
-@accent3: #B576AD;
-@accent4: #E04644;
-@accent5: #FDE47F;
-@accent6: #91BEAA;
+@accent1: rgb(124, 204, 229);
+@accent2: rgb(183, 217, 104);
+@accent3: rgb(181, 118, 173);
+@accent4: rgb(224, 70, 68);
+@accent5: rgb(253, 228, 127);
+@accent6: rgb(145, 190, 170);
 @light: #fff;
 @light2: #EEE;
 @dark: #5E696C;
