Escaped hex colors in SVG

--- a/Shared/shared-default-palet.less
+++ b/Shared/shared-default-palet.less
@@ -14,6 +14,17 @@ Visualizations
 Billboard Graphs
 Highlight.js 
 --------------------------------------------------------------*/
+/*********************************************************************/
+/* Helper variables */
+@accent1string : escape("@{accent1}");
+@accent2string : escape("@{accent2}");
+@accent3string : escape("@{accent3}");
+@accent4string : escape("@{accent4}");
+@accent5string : escape("@{accent5}");
+@accent6string : escape("@{accent6}");
+@lightstring : escape("@{light}");
+@darkstring : escape("@{dark}");
+
 
 /*********************************************************************/
 /* General & Typography */
