--- a/Stockholm/default-palet.less
+++ b/Stockholm/default-palet.less
@@ -23,28 +23,28 @@
 
   /* Lists */
   .reveal ul{
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{accent1}"  width="10" height="10" rx="5" ry="5"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{accent1string}"  width="10" height="10" rx="5" ry="5"/></svg>');
   }
   
   .reveal ul ul {
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{accent1}"  width="10" height="10" rx="0" ry="0"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{accent1string}"  width="10" height="10" rx="0" ry="0"/></svg>');
   }
   
   .reveal ul ul ul {
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="11px" height="14px"><title>Bullet</title><rect stroke="@{accent1}" fill-opacity="0.0" width="10" height="10" rx="5" ry="5"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="11px" height="14px"><title>Bullet</title><rect stroke="@{accent1string}" fill-opacity="0.0" width="10" height="10" rx="5" ry="5"/></svg>');
   }
   
   
   .reveal .inverted ul{
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{light}"  width="10" height="10" rx="5" ry="5"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{lightstring}"  width="10" height="10" rx="5" ry="5"/></svg>');
   }
   
   .reveal  .inverted ul ul {
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{light}"  width="10" height="10" rx="0" ry="0"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="10px" height="14px"><title>Bullet</title><rect fill="@{lightstring}"  width="10" height="10" rx="0" ry="0"/></svg>');
   }
   
   .reveal .inverted ul ul ul {
-    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="11px" height="14px"><title>Bullet</title><rect stroke="@{light}" fill-opacity="0.0" width="10" height="10" rx="5" ry="5"/></svg>');
+    list-style-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="11px" height="14px"><title>Bullet</title><rect stroke="@{lightstring}" fill-opacity="0.0" width="10" height="10" rx="5" ry="5"/></svg>');
   }
   
   .reveal ol li::before {
