Updated blocquotes styling

--- a/ColorTouch/color-touch-theme.less
+++ b/ColorTouch/color-touch-theme.less
@@ -99,12 +99,16 @@ table {
 /* blockquote */
 .reveal blockquote {
   display: block;
-  padding: 15px 20px 15px 45px;
-  margin: 0 0 20px;
+  padding: 15px 20px 15px 75px;
+  margin: 20px 0;
   position: relative;
   font-style: italic;
   border-left-style: solid;
   border-left-width: 10px;
+}
+
+.reveal blockquote  p{
+  margin-left:1em;
 }
 
 .reveal blockquote::before {
