--- a/Oblique/oblique-theme.less
+++ b/Oblique/oblique-theme.less
@@ -104,8 +104,8 @@ table {
 /* blockquote */
 .reveal blockquote {
   display: block;
-  padding: 15px 20px 15px 45px;
-  margin: 0 0 20px;
+  padding: 15px 20px 15px 70px;
+  margin: 1em 0 20px;
   position: relative;
   font-style: italic;
   border-left-style: solid;
