Added footnote and background fixes in Zlides theme

--- a/Reveal/theme.less
+++ b/Reveal/theme.less
@@ -73,7 +73,7 @@ body {
  *********************************************/
 
 .reveal  p {
-	margin: @blockMargin 0;
+	/*margin: @blockMargin 0;*/
 	line-height: 1.3;
 }
 
@@ -275,7 +275,7 @@ body {
  *********************************************/
 
 .reveal section img {
-	margin: 15px 0px;
+	margin: 0px 0px;
 	background: rgba(255,255,255,0.12);
 	border: 4px solid @mainColor;
 
